# tarlaanaliz-contract

./: .gitignore  APPLY_INSTRUCTIONS.md  CHANGELOG.md  CONTRACTS_VERSION.md  LICENSE  README.md  contracts_UPDATED_2026-02-15.md  package.json  pyproject.toml  tarlaanaliz-contracts_dizin_aciklamalari_UPDATED_2026-02-15.md  özet_dizin_v2_6_1__UPDATED_2026-02-15.txt
.github/workflows/: auto_sync.yml  contract_validation.yml
api/: edge_local.v1.yaml  platform_internal.v1.yaml  platform_public.v1.yaml
api/components/: parameters.yaml  responses.yaml  schemas.yaml  security_schemes.yaml
docs/: README.md  versioning_policy.md
docs/audits/: 2026-02-20_contract_audit.md  CONTRACT_AUDIT_2026-02-20.md
docs/canonical/: GELISTIRICI_UYGULAMA_PAKETI_v2_4_.docx  KANONIK_URUN_ISLEYIS_REHBERI_v2_4_.docx  README.md  SAHA_OPERASYON_SOP_v2_4_.docx
docs/checklists/: CI_GATE_CHECKLIST.md  PR_GATE_CHECKLIST.md  RELEASE_GATE_CHECKLIST.md
docs/examples/: README.md  analysis_job.example.json  analysis_result.example.json  field.example.json  intake_manifest.example.json  mission.example.json  payment_intent.example.json
docs/migration_guides/: MIGRATION_GUIDE_TEMPLATE.md  README.md  field_v1_to_v2.md
enums/: analysis_type.enum.v1.json  crop_type.enum.v1.json  mission_status.enum.v1.json  payment_method.v1.json  payment_status.v1.json  payment_status.v2.json  payment_target_type.v1.json  quarantine_decision.enum.v1.json  role.enum.v1.json  threat_type.enum.v1.json  user_role.enum.v1.json
schemas/core/: field.v1.schema.json  mission.v1.schema.json  user.v1.schema.json  user_pii.v1.schema.json
schemas/edge/: edge_metadata.v1.schema.json  intake_manifest.v1.schema.json  quarantine_event.v1.schema.json
schemas/events/: analysis_completed.v1.schema.json  field_created.v1.schema.json  mission_assigned.v1.schema.json
schemas/platform/: calibrated_dataset_manifest.v1.schema.json  calibration_result.v1.schema.json  layer_registry.v1.schema.json  payment_intent.v1.schema.json  payment_intent.v2.schema.json  payroll.v1.schema.json  pricing.v1.schema.json  qc_report.v1.schema.json
schemas/shared/: address.v1.schema.json  geojson.v1.schema.json  money.v1.schema.json
schemas/worker/: analysis_job.v1.schema.json  analysis_result.v1.schema.json
ssot/: README.md  contracts_ssot.md
tests/: test_examples_match_schemas.py  test_no_breaking_changes.py  test_validate_all_schemas.py
tools/: breaking_change_detector.py  compute_contracts_sha256.py  generate_types.sh  pin_version.py  read_contracts_version.py  sync_to_repos.py  sync_to_repos.sh  validate.py
